fixed scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,25 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Area+Normal:wght@700&family=Inter:wght@400&family=Martian+Mono:wght@500&display=swap");
 
+@layer utilities {
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
+
 html {
-  font-family: "Inter", sans-serif; /* Fallback font */
+  font-family: "Inter", sans-serif;
+  /* Fallback font */
 }
 
 body {
